# gradio-iFrame

./: .gitignore  Dockerfile  README.md  app.py  gradio_iframe-0.0.1-py3-none-any.whl  gradio_iframe-0.0.3-py3-none-any.whl  gradio_iframe-0.0.4-py3-none-any.whl  requirements.txt  start-venv.sh
src/: .gitignore  README.md  pyproject.toml
src/backend/gradio_iframe/: __init__.py  iframe.py  iframe.pyi
src/backend/gradio_iframe/templates/component/: index.js  style.css
src/backend/gradio_iframe/templates/example/: index.js  style.css
src/demo/: app.py
src/frontend/: Example.svelte  Index.svelte  package-lock.json  package.json
src/frontend/shared/: HTML.svelte
